--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <div class="container">
+        <nav>
 
+        </nav>
+        <main>
+            
+        </main>
+    </div>
     <script src="script.js"></script>
 </body>
